--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@types/react-router-dom": "^5.3.3",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@types/firebase": "^2.4.32",
