--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@types/firebase": "^2.4.32",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
