Update Twilio SMS service and matching service with improved cuisine preference selection

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["libphonenumber-js", "node"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
