--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
+    "libphonenumber-js": "^1.11.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1"
@@ -26,7 +27,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
     "@types/firebase": "^2.4.32",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.10.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -36,11 +37,19 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "firebase-admin": "^13.0.2",
+    "firebase-functions": "^6.3.0",
     "framer-motion": "^11.18.1",
     "postcss": "^8.5.1",
     "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.0.2",
+    "twilio": "^5.4.2",
+    "typescript": "^5.7.3",
     "vite": "^4.5.5"
-  }
+  },
+  "description": "## Overview Nectr is an innovative social matching platform designed to connect users based on shared interests, cuisine preferences, and social dynamics.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
