--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "clean": "rimraf dist node_modules/.vite node_modules/.cache"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "2.8.1",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@twilio/conversations": "^2.6.0",
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
+    "framer-motion": "^10.16.4",
     "libphonenumber-js": "^1.11.18",
     "react-router-dom": "^7.1.1"
   },
@@ -43,7 +44,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.3.0",
-    "framer-motion": "10.16.4",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
