--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "framer-motion": "^10.16.4",
     "libphonenumber-js": "^1.11.18",
     "react-router-dom": "^6.20.0",
-    "use-callback-ref": "^1.3.3"
+    "use-callback-ref": "1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
