--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.0",
     "@twilio/conversations": "^2.6.0",
     "@types/react-router-dom": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
@@ -43,7 +44,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "firebase-admin": "^13.0.2",
+    "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.0",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
